# Bosch-Controller

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  controller.h  generateDiv.awk  main.cpp  sched.cpp
docs/: building.md  header.html  index.html  new_task.md
docs/htmldocs/html/: analysis_8h_source.html  annotated.html  annotated_dup.js  camera_8h.html  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  class_analysis-members.html  class_analysis.html  class_analysis__coll__graph.map  class_analysis__inherit__graph.md5  class_camera-members.html  class_camera.html  class_camera__coll__graph.map  class_camera__coll__graph.md5  class_camera__inherit__graph.map  class_camera__inherit__graph.md5  class_command_socket-members.html  class_command_socket.html  class_command_socket__inherit__graph.map  class_command_socket__inherit__graph.md5  class_control-members.html  class_control.html  class_control__coll__graph.map  class_control__inherit__graph.md5  class_i_otask-members.html  class_i_otask.html  class_i_otask.js  class_i_otask__coll__graph.map  class_i_otask__coll__graph.md5  class_i_otask__inherit__graph.map  class_i_otask__inherit__graph.md5  class_keyboard-members.html  class_keyboard.html  class_keyboard__coll__graph.map  class_keyboard__coll__graph.md5  class_keyboard__inherit__graph.map  class_keyboard__inherit__graph.md5  class_lane_detection-members.html  class_lane_detection.html  (+248 more)
docs/htmldocs/html/search/: all_0.js  all_1.js  (+37 more)
docs/htmldocs/latex/: analysis_8h_source.tex  annotated.tex  camera_8h.tex  camera_8h__incl.md5  camera_8h_source.tex  class_analysis.tex  class_analysis__coll__graph.md5  class_camera.tex  class_camera__coll__graph.md5  class_camera__inherit__graph.md5  class_command_socket.tex  class_command_socket__coll__graph.md5  class_control.tex  class_control__inherit__graph.md5  class_i_otask.tex  class_i_otask__coll__graph.md5  class_i_otask__inherit__graph.md5  class_keyboard.tex  class_keyboard__coll__graph.md5  class_keyboard__inherit__graph.md5  class_lane_detection.tex  class_lane_detection__coll__graph.md5  class_line_reader.tex  class_loggable.tex  class_loggable__inherit__graph.md5  class_motors.tex  class_motors__coll__graph.md5  class_motors__inherit__graph.md5  class_options_manager.tex  class_ptask.tex  class_ptask__coll__graph.md5  class_ptask__inherit__graph.md5  class_ptask_pool.tex  class_sensor.tex  class_sensor__coll__graph.md5  class_sensor__inherit__graph.md5  class_serial.tex  class_sink.tex  class_sink__coll__graph.md5  class_sink__inherit__graph.md5  (+54 more)
iotasks/: iotask.cpp  iotask.h
iotasks/sensors/camera/: camera.cpp  camera.h  pdata.inc
iotasks/sensors/keyboard/: keyboard.cpp  keyboard.h
iotasks/sinks/motors/: motors.cpp  motors.h  options.inc
iotasks/sinks/web_feed/: options.inc  web_feed.cpp  web_feed.h
iotasks/sinks/window_feed/: window_feed.cpp  window_feed.h
options/: all_options.inc  all_options_list  all_pdata.inc  all_pdata_list  build_all_x_includes.sh  generate_options.awk  generate_options.py  options.gen.inc  options_defaults.gen.inc  options_manager.cpp  options_manager.h  options_parse.gen.inc  options_register.gen.inc  pdata.gen.inc
ptasks/: pdata.inc  pool.cpp  pool.h  ptask.cpp  ptask.h
ptasks/analysis/: analysis.cpp  analysis.h  options.inc  pdata.inc
ptasks/control/: control.cpp  control.h  pdata.inc
ptasks/lane_detection/: lane_detection.cpp  lane_detection.h  options.inc  pdata.inc
src/: controller.h  generate_options.py  main.cpp  sched.cpp
src/iotasks/: iotask.cpp  iotask.h
src/iotasks/sensors/: sensor.h
src/iotasks/sinks/: sink.h
src/ptasks/: pool.cpp  pool.h  ptask.cpp  ptask.h
src/ptasks/analysis/: analysis.cpp  analysis.h
src/ptasks/control/: control.cpp  control.h  options.inc
src/ptasks/lane_detection/: lane_detection.cpp  lane_detection.h  options.inc  pdata.inc
src/utils/command_socket/: command_socket.cpp  command_socket.h  line_reader.cpp  line_reader.h  static_options.inc
src/utils/loggable/: loggable.cpp  loggable.h
src/utils/options_manager/: options_manager.cpp  options_manager.h
src/utils/serial/: serial.cpp  serial.h  static_options.inc
utils/command_socket/: command_socket.cpp  command_socket.h  line_reader.h
utils/serial/: serial.cpp  serial.h
(+12 files in other folders)
